--- a/scss/components/_character.scss
+++ b/scss/components/_character.scss
@@ -63,6 +63,10 @@
         font-size: small;
         font-family: $font-primary;
       }
+
+      .heavy-tip.heavy-red {
+        color: red;
+      }
     }
 
     .notes {
